background without repeat

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
     <style>
       body{
         background-image:url("%PUBLIC_URL%/tlo.jpg");
+         background-repeat: no-repeat;
       }
     </style>
     <meta charset="utf-8" />
