--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
       body{
         background-image:url("%PUBLIC_URL%/tlo.jpg");
          background-repeat: no-repeat;
+         background-size: cover;
       }
     </style>
     <meta charset="utf-8" />
