--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         background-image:url("%PUBLIC_URL%/tlo.jpg");
          background-repeat: no-repeat;
          background-size: cover;
+         width: 33%;
       }
     </style>
     <meta charset="utf-8" />
